# duckdb_mcp

./: .gitignore  .mcp.json  CMakeLists.txt  FUNCTION_NAMING_CONVENTION.md  IMPLEMENTATION_PROMPT.md  IMPLEMENTATION_ROADMAP.md  MCPFS_SPECIFICATION.md  Makefile  README.md  SECURITY_AUDIT.md  SECURITY_IMPLEMENTATION.md  TEMPLATE_IMPLEMENTATION_SUMMARY.md  enhance_and_serve.sh  enhance_and_serve.sql  extension_config.cmake  launch_mcp_server.sh  layer3_client.py  make.out  mkdocs.yml  quick_test.py  setup_server.sql  simple_layer2_test.py  simple_python_mcp_server.py  test_dual_mode.py  test_duckdb_mcp_client.py  test_duckdb_server_client.py  test_fastmcp_client.py  test_fastmcp_tool.py  test_full_nested_ecosystem.py  test_layer2_step_by_step.py  test_mcp_client.py  test_mcp_fixed.py  test_mcp_minimal.py  test_mcp_server_simple.py  test_new_attach_syntax.py  test_pagination_final.sql  test_pagination_performance.sql  test_pagination_working.sql  test_server_templates.sql  test_simple_server.py  (+1 more)
.github/workflows/: MainDistributionPipeline.yml
.lq/: commands.toml  config.toml
agents/: README.md  duckdb-mcp-analyst.md  duckdb-mcp-explorer.md
agents/specialized/: README.md  duckdb-mcp-developer.md  duckdb-mcp-devops.md  duckdb-mcp-docs.md  duckdb-mcp-web.md
docs/: RELEASE_NOTES_v1.0.0.md  changelog.md  examples.md  getting-started.md  index.md  requirements.txt
docs/archive/: MCP_DUCKDB_INTEGRATION_DESIGN.md
docs/guides/: client-usage.md  custom-tools.md  security.md  server-usage.md
docs/internal/: CODE_REVIEW_2026_02.md  ISSUE_TRACKER.md  MCP_NESTED_EXPERIMENT.md  PAGINATION_IMPLEMENTATION_SUMMARY.md  PAGINATION_TEST_REPORT.md  SECURITY_IMPLEMENTATION.md  TESTING_STRATEGY.md  templates.md
docs/reference/: client.md  configuration.md  server.md
examples/: README.md  template_examples.sql
examples/01-simple/: README.md  init-mcp-db.sql  init-mcp-server.sql  launch-mcp.sh  mcp.json  start-mcp-server.sql  test-calls.json  test-calls.ldjson
examples/02-configured/: README.md  config.env  init-mcp-db.sql  init-mcp-server.sql  launch-mcp.sh  mcp.json  start-mcp-server.sql  test-calls.json  test-calls.ldjson
examples/03-with-data/: README.md  init-mcp-db.sql  init-mcp-server.sql  launch-mcp.sh  mcp.json  start-mcp-server.sql  test-calls.json  test-calls.ldjson
examples/04-security/: README.md  init-mcp-db.sql  init-mcp-server.sql  launch-mcp.sh  mcp.json  start-mcp-server.sql  test-calls.json  test-calls.ldjson
src/: duckdb_mcp_config.cpp  duckdb_mcp_extension.cpp  duckdb_mcp_logging.cpp  duckdb_mcp_security.cpp  json_utils.cpp  mcp_instance_state.cpp  result_formatter.cpp
src/mcpfs/: mcp_path.cpp  (+1 more)
test/: .mcp.json  test_documented_features.py  test_security_validation.py
(+166 files in other folders)
